--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "bun run index.ts",
+        "dev": "bun run src/index.ts",
         "build": "tsc",
         "start": "node dist/index.js"
     },
@@ -32,6 +32,7 @@
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
+        "@types/cors": "^2.8.17",
         "@types/jsonwebtoken": "^9.0.2",
         "ts-node-dev": "^2.0.0"
     }
