--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "outDir": "./dist", // Specifies the output directory
         "rootDir": "./src",
         "strict": true
-        // other compiler options...
+        // other compiler options..
     },
     "exclude": ["front-end"]
     // other configurations...
