--- a/package.json
+++ b/package.json
@@ -1,39 +1,16 @@
 {
-    "name": "daily-food-tracker-be",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "dev": "bun run src/index.ts",
-        "build": "tsc",
-        "start": "node dist/index.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/hosseyn-alavi/daily-food-tracker-be.git"
-    },
-    "author": "",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/hosseyn-alavi/daily-food-tracker-be/issues"
-    },
-    "homepage": "https://github.com/hosseyn-alavi/daily-food-tracker-be#readme",
-    "dependencies": {
-        "@types/express": "^4.17.17",
-        "bcrypt": "^5.1.0",
-        "body-parser": "^1.20.2",
-        "cors": "^2.8.5",
-        "dotenv": "^16.0.3",
-        "express": "^4.18.2",
-        "jsonwebtoken": "^9.0.0",
-        "pg": "^8.11.1",
-        "prettier": "^2.8.8",
-        "sequelize": "^6.32.0"
-    },
-    "devDependencies": {
-        "@types/bcrypt": "^5.0.0",
-        "@types/cors": "^2.8.17",
-        "@types/jsonwebtoken": "^9.0.2",
-        "ts-node-dev": "^2.0.0"
-    }
+  "name": "daily-food-tracker-bun",
+  "module": "index.ts",
+  "type": "module",
+  "devDependencies": {
+    "@types/bun": "latest",
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.5.4"
+  },
+  "peerDependencies": {
+    "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "express": "^4.21.0"
+  }
 }
