--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "src/index.ts",
+            "src": "index.ts",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "src/index.ts",
-            "methods": ["GET", "POST", "DELETE", "PUT"]
+            "dest": "index.ts"
         }
     ]
 }
