--- a/package.json
+++ b/package.json
@@ -1,210 +1,15 @@
 {
-  "name": "daily-food-tracker-bun",
-  "version": "1.0.0",
-  "main": "index.js",
-  "dependencies": {
-    "abbrev": "^1.1.1",
-    "accepts": "^1.3.8",
-    "acorn": "^8.12.1",
-    "acorn-walk": "^8.3.4",
-    "agent-base": "^6.0.2",
-    "ansi-regex": "^5.0.1",
-    "anymatch": "^3.1.3",
-    "aproba": "^2.0.0",
-    "are-we-there-yet": "^2.0.0",
-    "arg": "^4.1.3",
-    "array-flatten": "^1.1.1",
-    "balanced-match": "^1.0.2",
-    "bcrypt": "^5.1.1",
-    "binary-extensions": "^2.3.0",
-    "body-parser": "^1.20.3",
-    "brace-expansion": "^1.1.11",
-    "braces": "^3.0.3",
-    "buffer-equal-constant-time": "^1.0.1",
-    "buffer-from": "^1.1.2",
-    "bun-types": "^1.1.27",
-    "bytes": "^3.1.2",
-    "call-bind": "^1.0.7",
-    "chokidar": "^3.6.0",
-    "chownr": "^2.0.0",
-    "color-support": "^1.1.3",
-    "concat-map": "^0.0.1",
-    "console-control-strings": "^1.1.0",
-    "content-disposition": "^0.5.4",
-    "content-type": "^1.0.5",
-    "cookie": "^0.6.0",
-    "cookie-signature": "^1.0.6",
-    "cors": "^2.8.5",
-    "create-require": "^1.1.1",
-    "debug": "^2.6.9",
-    "define-data-property": "^1.1.4",
-    "delegates": "^1.0.0",
-    "depd": "^2.0.0",
-    "destroy": "^1.2.0",
-    "detect-libc": "^2.0.3",
-    "diff": "^4.0.2",
-    "dotenv": "^16.4.5",
-    "dottie": "^2.0.6",
-    "dynamic-dedupe": "^0.3.0",
-    "ecdsa-sig-formatter": "^1.0.11",
-    "ee-first": "^1.1.1",
-    "emoji-regex": "^8.0.0",
-    "encodeurl": "^2.0.0",
-    "es-define-property": "^1.0.0",
-    "es-errors": "^1.3.0",
-    "escape-html": "^1.0.3",
-    "etag": "^1.8.1",
-    "express": "^4.21.0",
-    "fill-range": "^7.1.1",
-    "finalhandler": "^1.3.1",
-    "forwarded": "^0.2.0",
-    "fresh": "^0.5.2",
-    "fs-minipass": "^2.1.0",
-    "fs.realpath": "^1.0.0",
-    "fsevents": "^2.3.3",
-    "function-bind": "^1.1.2",
-    "gauge": "^3.0.2",
-    "get-intrinsic": "^1.2.4",
-    "glob": "^7.2.3",
-    "glob-parent": "^5.1.2",
-    "gopd": "^1.0.1",
-    "has-property-descriptors": "^1.0.2",
-    "has-proto": "^1.0.3",
-    "has-symbols": "^1.0.3",
-    "has-unicode": "^2.0.1",
-    "hasown": "^2.0.2",
-    "http-errors": "^2.0.0",
-    "https-proxy-agent": "^5.0.1",
-    "iconv-lite": "^0.4.24",
-    "inflection": "^1.13.4",
-    "inflight": "^1.0.6",
-    "inherits": "^2.0.4",
-    "ipaddr.js": "^1.9.1",
-    "is-binary-path": "^2.1.0",
-    "is-core-module": "^2.15.1",
-    "is-extglob": "^2.1.1",
-    "is-fullwidth-code-point": "^3.0.0",
-    "is-glob": "^4.0.3",
-    "is-number": "^7.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "jwa": "^1.4.1",
-    "jws": "^3.2.2",
-    "lodash": "^4.17.21",
-    "lodash.includes": "^4.3.0",
-    "lodash.isboolean": "^3.0.3",
-    "lodash.isinteger": "^4.0.4",
-    "lodash.isnumber": "^3.0.3",
-    "lodash.isplainobject": "^4.0.6",
-    "lodash.isstring": "^4.0.1",
-    "lodash.once": "^4.1.1",
-    "make-dir": "^3.1.0",
-    "make-error": "^1.3.6",
-    "media-typer": "^0.3.0",
-    "merge-descriptors": "^1.0.3",
-    "methods": "^1.1.2",
-    "mime": "^1.6.0",
-    "mime-db": "^1.52.0",
-    "mime-types": "^2.1.35",
-    "minimatch": "^3.1.2",
-    "minimist": "^1.2.8",
-    "minipass": "^5.0.0",
-    "minizlib": "^2.1.2",
-    "mkdirp": "^1.0.4",
-    "moment": "^2.30.1",
-    "moment-timezone": "^0.5.45",
-    "ms": "^2.0.0",
-    "negotiator": "^0.6.3",
-    "node-addon-api": "^5.1.0",
-    "node-fetch": "^2.7.0",
-    "nopt": "^5.0.0",
-    "normalize-path": "^3.0.0",
-    "npmlog": "^5.0.1",
-    "object-assign": "^4.1.1",
-    "object-inspect": "^1.13.2",
-    "on-finished": "^2.4.1",
-    "once": "^1.4.0",
-    "parseurl": "^1.3.3",
-    "path-is-absolute": "^1.0.1",
-    "path-parse": "^1.0.7",
-    "path-to-regexp": "^0.1.10",
-    "pg": "^8.12.0",
-    "pg-cloudflare": "^1.1.1",
-    "pg-connection-string": "^2.6.4",
-    "pg-int8": "^1.0.1",
-    "pg-pool": "^3.6.2",
-    "pg-protocol": "^1.6.1",
-    "pg-types": "^2.2.0",
-    "pgpass": "^1.0.5",
-    "picomatch": "^2.3.1",
-    "postgres-array": "^2.0.0",
-    "postgres-bytea": "^1.0.0",
-    "postgres-date": "^1.0.7",
-    "postgres-interval": "^1.2.0",
-    "prettier": "^2.8.8",
-    "proxy-addr": "^2.0.7",
-    "qs": "^6.13.0",
-    "range-parser": "^1.2.1",
-    "raw-body": "^2.5.2",
-    "readable-stream": "^3.6.2",
-    "readdirp": "^3.6.0",
-    "resolve": "^1.22.8",
-    "retry-as-promised": "^7.0.4",
-    "rimraf": "^2.7.1",
-    "safe-buffer": "^5.2.1",
-    "safer-buffer": "^2.1.2",
-    "semver": "^7.6.3",
-    "send": "^0.19.0",
-    "sequelize": "^6.37.3",
-    "sequelize-pool": "^7.1.0",
-    "serve-static": "^1.16.2",
-    "set-blocking": "^2.0.0",
-    "set-function-length": "^1.2.2",
-    "setprototypeof": "^1.2.0",
-    "side-channel": "^1.0.6",
-    "signal-exit": "^3.0.7",
-    "source-map": "^0.6.1",
-    "source-map-support": "^0.5.21",
-    "split2": "^4.2.0",
-    "statuses": "^2.0.1",
-    "string_decoder": "^1.3.0",
-    "string-width": "^4.2.3",
-    "strip-ansi": "^6.0.1",
-    "strip-bom": "^3.0.0",
-    "strip-json-comments": "^2.0.1",
-    "supports-preserve-symlinks-flag": "^1.0.0",
-    "tar": "^6.2.1",
-    "to-regex-range": "^5.0.1",
-    "toidentifier": "^1.0.1",
-    "toposort-class": "^1.0.1",
-    "tr46": "^0.0.3",
-    "tree-kill": "^1.2.2",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "tsconfig": "^7.0.0",
-    "type-is": "^1.6.18",
-    "typescript": "^5.6.2",
-    "undici-types": "^6.19.8",
-    "unpipe": "^1.0.0",
-    "util-deprecate": "^1.0.2",
-    "utils-merge": "^1.0.1",
-    "uuid": "^8.3.2",
-    "v8-compile-cache-lib": "^3.0.1",
-    "validator": "^13.12.0",
-    "vary": "^1.1.2",
-    "webidl-conversions": "^3.0.1",
-    "whatwg-url": "^5.0.0",
-    "wide-align": "^1.1.5",
-    "wkx": "^0.5.0",
-    "wrappy": "^1.0.2",
-    "xtend": "^4.0.2",
-    "yallist": "^4.0.0",
-    "yn": "^3.1.1"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+    "name": "daily-food-tracker-bun",
+    "version": "1.0.0",
+    "main": "index.js",
+    "dependencies": {
+        "express": "^4.21.0"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": ""
 }
