--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-    "name": "daily-food-tracker-bun",
-    "version": "1.0.0",
-    "main": "index.js",
-    "dependencies": {
-        "express": "^4.21.0"
-    },
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "description": ""
+  "name": "daily-food-tracker-bun",
+  "module": "index.ts",
+  "type": "module",
+  "devDependencies": {
+    "@types/bun": "latest",
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.5.4"
+  },
+  "peerDependencies": {
+    "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "express": "^4.21.0"
+  }
 }
