--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "daily-food-tracker-bun",
-  "module": "index.ts",
-  "type": "module",
-  "devDependencies": {
-    "@types/bun": "latest",
-    "@types/express": "^4.17.21",
-    "@types/node": "^22.5.4"
-  },
-  "peerDependencies": {
-    "typescript": "^5.6.2"
-  },
-  "dependencies": {
-    "express": "^4.21.0"
-  }
+    "name": "daily-food-tracker-bun",
+    "module": "index.ts",
+    "type": "module",
+    "scripts": {
+        "dev": "bun run index.ts",
+        "build": "tsc index.ts",
+        "start": "node dist/index.js"
+    },
+    "devDependencies": {
+        "@types/bun": "latest",
+        "@types/express": "^4.17.21",
+        "@types/node": "^22.5.4"
+    },
+    "peerDependencies": {
+        "typescript": "^5.6.2"
+    },
+    "dependencies": {
+        "express": "^4.21.0"
+    }
 }
