--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "type": "module",
     "scripts": {
         "dev": "bun run index.ts",
-        "build": "tsc index.ts",
+        "build": "tsc",
         "start": "node dist/index.js"
     },
     "devDependencies": {
