--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
     "name": "daily-food-tracker-bun",
-    "module": "index.ts",
-    "type": "module",
-    "scripts": {
-        "dev": "bun run index.ts",
-        "build": "tsc",
-        "start": "node dist/index.js"
-    },
-    "devDependencies": {
-        "@types/bun": "latest",
-        "@types/express": "^4.17.21",
-        "@types/node": "^22.5.4"
-    },
-    "peerDependencies": {
-        "typescript": "^5.6.2"
-    },
+    "version": "1.0.0",
+    "description": "To install dependencies:",
+    "main": "index.js",
     "dependencies": {
         "express": "^4.21.0"
-    }
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.21",
+        "@types/node": "^22.5.4",
+        "typescript": "^5.6.2"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "ts-node-dev index.ts"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC"
 }
