--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
     "version": "1.0.0",
     "description": "To install dependencies:",
     "main": "index.js",
-    "dependencies": {
-        "express": "^4.21.0"
-    },
+    "dependencies": { "express": "^4.21.0" },
     "devDependencies": {
         "@types/express": "^4.17.21",
         "@types/node": "^22.5.4",
