--- a/package.json
+++ b/package.json
@@ -1,19 +1,39 @@
 {
-    "name": "daily-food-tracker-bun",
+    "name": "daily-food-tracker-be",
     "version": "1.0.0",
-    "description": "To install dependencies:",
+    "description": "",
     "main": "index.js",
-    "dependencies": { "express": "^4.21.0" },
-    "devDependencies": {
-        "@types/express": "^4.17.21",
-        "@types/node": "^22.5.4",
-        "typescript": "^5.6.2"
-    },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "ts-node-dev index.ts"
+        "dev": "bun run src/index.ts",
+        "build": "tsc",
+        "start": "node dist/index.js"
     },
-    "keywords": [],
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/hosseyn-alavi/daily-food-tracker-be.git"
+    },
     "author": "",
-    "license": "ISC"
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/hosseyn-alavi/daily-food-tracker-be/issues"
+    },
+    "homepage": "https://github.com/hosseyn-alavi/daily-food-tracker-be#readme",
+    "dependencies": {
+        "@types/express": "^4.17.17",
+        "bcrypt": "^5.1.0",
+        "body-parser": "^1.20.2",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.0",
+        "pg": "^8.11.1",
+        "prettier": "^2.8.8",
+        "sequelize": "^6.32.0"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/cors": "^2.8.17",
+        "@types/jsonwebtoken": "^9.0.2",
+        "ts-node-dev": "^2.0.0"
+    }
 }
